# Lmix

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  julia-overlay.nix  overlay.nix  overrides  overrides.py  pkgs-ver.nix  update.sh
examples/fftw-mpi/: Makefile.am  README.md  configure.ac  default.nix  flake.nix  main.c
examples/mkl-mat-mult/: Makefile  README.md  flake.nix  mkl_mat_mult.f90
examples/pauli-eigens/: Makefile  README.md  flake.nix  pauli_eigens.cpp
examples/user-modules/: default.nix  flake.nix
lib/: misc.nix  modules.nix
lmod2flake/: README.md  default.nix  pyproject.toml
lmod2flake/lmod2flake/: cli.py  modulecmd.py
modules/: builder.sh  default.nix  user-modules.nix
modules/binutils/: default.nix
modules/fftw/: default.nix
modules/gcc/: default.nix
modules/openmpi/: default.nix
modules/python/: default.nix
modules/ruby/: default.nix
overlays/: hpc-overlay.nix  julia-overlay.nix  misc-overlay.nix  module-overlay.nix  mpi-overlay.nix  overlay.nix
pkgs/ADIOS/: default.nix
pkgs/CGNS/: default.nix
pkgs/HDF5/: default.nix
pkgs/MGARD/: default.nix
pkgs/SZ/: default.nix
pkgs/adios/: default.nix
pkgs/bupc/: default.nix
pkgs/c-blosc/: default.nix
pkgs/cgns/: default.nix
pkgs/fftw/: default.nix
pkgs/hdf5/: default.nix
pkgs/julia/: 1.9.0-rc2-bin.nix
pkgs/mercury/: default.nix
pkgs/openmpi/: default.nix
pkgs/osu-micro-benchmarks/: default.nix
pkgs/scotch/: default.nix
pkgs/sz/: default.nix
template/: flake.nix
template/default/: flake.nix
template/lmod2flake/: flake.nix
(+29 files in other folders)
