[tool.poetry]
name = "lmod2flake"
version = "0.1.0"
description = "generate devShell flake from loaded modules"
authors = ["Kilian Markl <ki.markl@campus.lmu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"

[tool.poetry.scripts]
lmod2flake = "lmod2flake.cli:modules_to_flake"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
